tests/bad_dataflow.out
STDOUT:

STDERR:
CFG lowering error in function foo: MalformedPhiInfo(MalformedPhiInfo { infos: [SingleMalformedPhiInfo { bb_id: BBId(3), phi_dest: ValueRef(24, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(1): Value(ValueRef(6, 75..78, Some(VarId(2)), None))}, missing_sources: {BBId(2)} }, SingleMalformedPhiInfo { bb_id: BBId(6), phi_dest: ValueRef(34, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(4): Value(ValueRef(28, 39..40, Some(VarId(2)), Some(BBId(3)))), BBId(5): Value(ValueRef(29, 39..40, Some(VarId(2)), Some(BBId(3))))}, missing_sources: {BBId(4), BBId(5)} }, SingleMalformedPhiInfo { bb_id: BBId(6), phi_dest: ValueRef(25, 50..51, Some(VarId(3)), None), phi_var_id: Some(VarId(3)), sources: {BBId(4): Value(ValueRef(16, 167..170, Some(VarId(3)), None)), BBId(5): Value(ValueRef(18, 193..196, Some(VarId(3)), None))}, missing_sources: {BBId(4)} }], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(4), dest_val: ValueRef(15, 169..170, Some(VarId(2)), None), assigned_val: Value(ValueRef(28, 39..40, Some(VarId(2)), Some(BBId(3)))), missing_sources: {} }, SingleMalformedAssignmentInfo { bb_id: BBId(4), dest_val: ValueRef(16, 167..170, Some(VarId(3)), None), assigned_val: Value(ValueRef(15, 169..170, Some(VarId(2)), None)), missing_sources: {} }, SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(19, 215..216, Some(VarId(3)), None), assigned_val: Value(ValueRef(25, 50..51, Some(VarId(3)), None)), missing_sources: {} }], phi_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(4), dest_val: ValueRef(28, 39..40, Some(VarId(2)), Some(BBId(3))), assigned_val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)), missing_sources: {BBId(2), BBId(3)} }, SingleMalformedAssignmentInfo { bb_id: BBId(5), dest_val: ValueRef(29, 39..40, Some(VarId(2)), Some(BBId(3))), assigned_val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)), missing_sources: {BBId(2), BBId(3)} }], malformed_tails: [SingleMalformedTailInfo { bb_id: BBId(6), missing_sources: {} }], blocks: [BasicBlock { id: BBId(0), phi: [], instructions: [Assign { dest: ValueRef(0, 20..21, Some(VarId(0)), None), val: Param { param_index: 0 } }, Assign { dest: ValueRef(1, 27..28, Some(VarId(1)), None), val: Param { param_index: 1 } }, Assign { dest: ValueRef(2, 60..61, Some(VarId(0)), None), val: Value(ValueRef(0, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(3, 62..63, None, None), val: Const(0) }, Assign { dest: ValueRef(4, 60..63, None, None), val: LtCheck { left: ValueRef(2, 60..61, Some(VarId(0)), None), right: ValueRef(3, 62..63, None, None) } }], tail: CondBranch { cond: ValueRef(4, 60..63, None, None), then_bb: BBId(1), else_bb: BBId(2) }, successors: [BBId(1), BBId(2)], predecessors: [] }, BasicBlock { id: BBId(1), phi: [], instructions: [Assign { dest: ValueRef(21, 27..28, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(1, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(20, 20..21, Some(VarId(0)), Some(BBId(0))), val: Value(ValueRef(0, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(5, 77..78, None, None), val: Const(1) }, Assign { dest: ValueRef(6, 75..78, Some(VarId(2)), None), val: Value(ValueRef(5, 77..78, None, None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(2), phi: [], instructions: [Assign { dest: ValueRef(23, 27..28, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(1, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(22, 20..21, Some(VarId(0)), Some(BBId(0))), val: Value(ValueRef(0, 20..21, Some(VarId(0)), None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(3), phi: [PhiCfgInstruction { dest: ValueRef(24, 39..40, Some(VarId(2)), None), sources: {BBId(1): Value(ValueRef(6, 75..78, Some(VarId(2)), None))}, var_id: Some(VarId(2)), phi_type: Infer }, PhiCfgInstruction { dest: ValueRef(26, 20..21, Some(VarId(0)), None), sources: {BBId(1): Value(ValueRef(20, 20..21, Some(VarId(0)), Some(BBId(0)))), BBId(2): Value(ValueRef(22, 20..21, Some(VarId(0)), Some(BBId(0))))}, var_id: Some(VarId(0)), phi_type: Infer }, PhiCfgInstruction { dest: ValueRef(27, 27..28, Some(VarId(1)), None), sources: {BBId(1): Value(ValueRef(21, 27..28, Some(VarId(1)), Some(BBId(0)))), BBId(2): Value(ValueRef(23, 27..28, Some(VarId(1)), Some(BBId(0))))}, var_id: Some(VarId(1)), phi_type: Infer }], instructions: [Assign { dest: ValueRef(12, 152..153, Some(VarId(1)), None), val: Value(ValueRef(27, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(13, 154..155, None, None), val: Const(0) }, Assign { dest: ValueRef(14, 152..155, None, None), val: GtCheck { left: ValueRef(12, 152..153, Some(VarId(1)), None), right: ValueRef(13, 154..155, None, None) } }], tail: CondBranch { cond: ValueRef(14, 152..155, None, None), then_bb: BBId(4), else_bb: BBId(5) }, successors: [BBId(4), BBId(5)], predecessors: [BBId(1), BBId(2)] }, BasicBlock { id: BBId(4), phi: [], instructions: [Assign { dest: ValueRef(31, 27..28, Some(VarId(1)), Some(BBId(3))), val: Value(ValueRef(27, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(30, 20..21, Some(VarId(0)), Some(BBId(3))), val: Value(ValueRef(26, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(28, 39..40, Some(VarId(2)), Some(BBId(3))), val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)) }, Assign { dest: ValueRef(15, 169..170, Some(VarId(2)), None), val: Value(ValueRef(28, 39..40, Some(VarId(2)), Some(BBId(3)))) }, Assign { dest: ValueRef(16, 167..170, Some(VarId(3)), None), val: Value(ValueRef(15, 169..170, Some(VarId(2)), None)) }], tail: UncondBranch { target: BBId(6) }, successors: [BBId(6)], predecessors: [BBId(3)] }, BasicBlock { id: BBId(5), phi: [], instructions: [Assign { dest: ValueRef(33, 27..28, Some(VarId(1)), Some(BBId(3))), val: Value(ValueRef(27, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(32, 20..21, Some(VarId(0)), Some(BBId(3))), val: Value(ValueRef(26, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(29, 39..40, Some(VarId(2)), Some(BBId(3))), val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)) }, Assign { dest: ValueRef(17, 195..196, None, None), val: Const(0) }, Assign { dest: ValueRef(18, 193..196, Some(VarId(3)), None), val: Value(ValueRef(17, 195..196, None, None)) }], tail: UncondBranch { target: BBId(6) }, successors: [BBId(6)], predecessors: [BBId(3)] }, BasicBlock { id: BBId(6), phi: [PhiCfgInstruction { dest: ValueRef(25, 50..51, Some(VarId(3)), None), sources: {BBId(4): Value(ValueRef(16, 167..170, Some(VarId(3)), None)), BBId(5): Value(ValueRef(18, 193..196, Some(VarId(3)), None))}, var_id: Some(VarId(3)), phi_type: Infer }, PhiCfgInstruction { dest: ValueRef(34, 39..40, Some(VarId(2)), None), sources: {BBId(4): Value(ValueRef(28, 39..40, Some(VarId(2)), Some(BBId(3)))), BBId(5): Value(ValueRef(29, 39..40, Some(VarId(2)), Some(BBId(3))))}, var_id: Some(VarId(2)), phi_type: Infer }, PhiCfgInstruction { dest: ValueRef(35, 20..21, Some(VarId(0)), None), sources: {BBId(4): Value(ValueRef(30, 20..21, Some(VarId(0)), Some(BBId(3)))), BBId(5): Value(ValueRef(32, 20..21, Some(VarId(0)), Some(BBId(3))))}, var_id: Some(VarId(0)), phi_type: Infer }, PhiCfgInstruction { dest: ValueRef(36, 27..28, Some(VarId(1)), None), sources: {BBId(4): Value(ValueRef(31, 27..28, Some(VarId(1)), Some(BBId(3)))), BBId(5): Value(ValueRef(33, 27..28, Some(VarId(1)), Some(BBId(3))))}, var_id: Some(VarId(1)), phi_type: Infer }], instructions: [Assign { dest: ValueRef(19, 215..216, Some(VarId(3)), None), val: Value(ValueRef(25, 50..51, Some(VarId(3)), None)) }], tail: Return { value: Some(ValueRef(19, 215..216, Some(VarId(3)), None)) }, successors: [], predecessors: [BBId(4), BBId(5)] }] })
error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:13:11
   │
 3 │     int x;
   │         - Variable declaration site
   ·
13 │         y=x;
   │           ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:13:9
   │
13 │         y=x;
   │         ^^^
   │         │ │
   │         │ Variable declaration site
   │         value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:17:12
   │
 4 │     int y;
   │         - Variable declaration site
   ·
17 │     return y;
   │            ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

---
digraph MalformedPhiInfo {
  node [shape=box, fontname="Courier New", fontsize=10];
  edge [fontname="Courier New", fontsize=9];
  BB0 [label="BB0:\n    %0 = param[0] (a)\n    %1 = param[1] (b)\n    %2 = %0 (a)\n    %3 = const.i64 0\n    %4 = lt %2, %3\n    br_cond %4 ? BB1 : BB2;\n"];
  BB1 [label="BB1:\n    %21 = %1 (b)\n    %20 = %0 (a)\n    %5 = const.i64 1\n    %6 = %5 (x)\n    br BB3\n"];
  BB2 [label="BB2:\n    %23 = %1 (b)\n    %22 = %0 (a)\n    br BB3\n"];
  BB3 [label="BB3:\n    %24 = Φ(%6@BB1 [malformed: missing from BBs [2]]) (x)\n    %26 = Φ(%20@BB1, %22@BB2) (a)\n    %27 = Φ(%21@BB1, %23@BB2) (b)\n    %12 = %27 (b)\n    %13 = const.i64 0\n    %14 = gt %12, %13\n    br_cond %14 ? BB4 : BB5;\n"];
  BB4 [label="BB4:\n    %31 = %27 (b)\n    %30 = %26 (a)\n    %28 = %24 [malformed: missing from BBs [3]] (x)\n    %15 = %28 [malformed: missing from BBs []] (x)\n    %16 = %15 [malformed: missing from BBs []] (y)\n    br BB6\n"];
  BB5 [label="BB5:\n    %33 = %27 (b)\n    %32 = %26 (a)\n    %29 = %24 [malformed: missing from BBs [3]] (x)\n    %17 = const.i64 0\n    %18 = %17 (y)\n    br BB6\n"];
  BB6 [label="BB6:\n    %25 = Φ(%16@BB4, %18@BB5 [malformed: missing from BBs [4]]) (y)\n    %34 = Φ(%28@BB4, %29@BB5 [malformed: missing from BBs [4, 5]]) (x)\n    %35 = Φ(%30@BB4, %32@BB5) (a)\n    %36 = Φ(%31@BB4, %33@BB5) (b)\n    %19 = %25 [malformed: missing from BBs []] (y)\n    return %19\n"];
  BB0 -> BB1 [color=green];
  BB0 -> BB2 [color=red];
  BB1 -> BB3;
  BB2 -> BB3 [label="missing vars: x",fontcolor=red];
  BB3 -> BB4 [color=green,label="missing vars: x",fontcolor=red];
  BB3 -> BB5 [color=red,label="missing vars: x",fontcolor=red];
  BB4 -> BB6 [label="missing vars: x, y",fontcolor=red];
  BB5 -> BB6 [label="missing vars: x",fontcolor=red];
}

Error: CFG lowering failed
